# cookup

./: Cargo.toml  README.md  cookbook.db  cookbook.ts
.github/workflows/: rust.yml
src/: chatbot.rs  cookbook.rs  main.rs  read_cookbook.rs  recipes.rs  utils.rs  write_recipe.rs
