[package]
name = "cookup"
version = "0.1.0"
edition = "2021"

[dependencies]
inquire = "0.7"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
indicatif = "0.17"
rusqlite = { version = "0.31.0", features = ["bundled"] }
