[package]
name = "cookup"
version = "0.1.0"
edition = "2021"

[dependencies]
ctrlc = "3.4"
inquire = { version = "0.7", features = ["editor"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
indicatif = "0.17"
swc_common = "2.0.1"          # Replace with the latest version
swc_ecma_parser = "3.0.1"
swc_ecma_codegen = "2.0.0"
swc_ecma_ast = "2.0.0"
chrono = "0.4.38"